Change text and css font call method

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="title">Sobre</h2>
             <p class="description">Um pouco sobre mim</p>
             <div class="introduction">
-                <p>Eu tenho 29 anos e moro na cidade de Pelotas - RS - Brasil. Trabalho como desenvolvedor desde 2004, quando começei a trabalhar na <a href="javascript:;">AG2 Publicis Modem</a>, onde trabalhei até março de 2013. Em Abril de 2013 começei a trabalhar na <a href="javascript:;">Nodo</a>, onde trabalho até hoje. Sou casado, metido a atleta, maniaco por carne, louco por uma gelada e adoro viajar. Sou dedicado, organizado, comprometido e apaixonado pelo que faço!</p>
+                <p>Eu tenho 29 anos e moro na cidade de Pelotas - RS - Brasil. Trabalho como desenvolvedor desde 2004, quando começei a trabalhar na <a href="javascript:;">AG2 Publicis Modem</a>, onde trabalhei até março de 2013. Em abril de 2013 começei a trabalhar na <a href="javascript:;">Nodo</a>, onde trabalho até hoje. Sou casado, metido a atleta, maniaco por carne, louco por uma gelada e adoro viajar. Sou dedicado, organizado, comprometido e apaixonado pelo que faço!</p>
             </div>
             <ul class="images">
                 <li><img src="img/married.png" height="275" width="400"></li>
@@ -126,7 +126,7 @@
                     <div class="container description">
                         <h2><a href="http://nodo.cc" target="_blank">nodo.cc</a></h2>
                         <h3>Senior Front End</h3>
-                        <p>Atuo como desenvolvedor front end senior, trabalhando em projetos nacionais e internacionais. Trabalho principalmente em projetos mobile e projetos que requerem animações.</p>
+                        <p>Atuo como desenvolvedor senior front end, trabalhando em projetos nacionais e internacionais. Trabalho principalmente em projetos mobile e projetos que requerem animações.</p>
                     </div>
                 </li>
                 <li>
