--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="title">Sobre</h2>
             <p class="description">Um pouco sobre mim</p>
             <div class="introduction">
-                <p>Eu tenho 29 anos e moro na cidade de Pelotas - RS - Brasil. Trabalho como desenvolvedor desde 2004, quando começei a trabalhar na <a href="javascript:;">AG2 Publicis Modem</a>, onde trabalhei até março de 2013. Em abril de 2013 começei a trabalhar na <a href="javascript:;">Nodo</a>, onde trabalho até hoje. Sou casado, metido a atleta, maniaco por carne, louco por uma gelada e adoro viajar. Sou dedicado, organizado, comprometido e apaixonado pelo que faço!</p>
+                <p>Eu tenho 29 anos e moro na cidade de Pelotas - RS - Brasil. Trabalho como desenvolvedor desde 2004, quando começei a trabalhar na <a href="javascript:;">AG2 Publicis Modem</a>, onde trabalhei até março de 2013. Em abril de 2013 começei a trabalhar na <a href="javascript:;">Nodo</a>, onde trabalho até hoje. Sou casado, metido a atleta, maníaco por carne, louco por uma gelada e adoro viajar. Sou dedicado, organizado, comprometido e apaixonado pelo que faço!</p>
             </div>
             <ul class="images">
                 <li><img src="img/married.png" height="275" width="400"></li>
