--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <span class="line"><!--  --></span>
                     <span class="circle"><!--  --></span>
                     <div class="period">
-                        Present
+                        Atual
                         <span>-</span> 
                         04/2013
                     </div>
