multi language feature

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Vinicius Marques | Front End Developer</title>
-	
-	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1, maximum-scale=1">
+    <meta charset="UTF-8">
+    <title>Vinicius Marques | Front End Developer</title>
+    
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
@@ -22,17 +22,21 @@
     
 </head>
 <body class="loading">
-    <div class="loader"><div>Carregando...</div></div>
+    <div class="loader"><div></div></div>
     <span class="icon-nav" title="Open Navigation"><!--   --></span>
     <span class="icon-nav-close" title="Close Navigation"><!--   --></span>
+    <div class="lst-language">
+        <a href="#/en" class="en active" title="English">EN</a>
+        <a href="#/pt" class="pt" title="Português">PT</a>
+    </div>
     <nav>
         <div class="content">
             <h1>Vincius Marques</h1>
-            <a href="#about" title="Sobre">Sobre</a>
-            <a href="#skills" title="Habilidades">Habilidades</a>
-            <a href="#works" title="Experiência de trabalho">Experiência de trabalho</a>
-            <a href="#education" title="Educação">Educação</a>
-            <a href="#contact" title="Contato">Contato</a>
+            <a href="#about" class="about" title="Sobre">Sobre</a>
+            <a href="#skills" class="skills" title="Habilidades">Habilidades</a>
+            <a href="#works" class="works" title="Experiência de trabalho">Experiência de trabalho</a>
+            <a href="#education" class="education" title="Educação">Educação</a>
+            <a href="#contact" class="contact" title="Contato">Contato</a>
         </div>
     </nav>
     <header>
