--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
         <div class="content">
             <h2 class="title"></h2>
             <p class="description"></p>
-            <ul class="companies"></ul>
+            <ul class="companies">
+                <li class="icon-logo-bradesco">Bradesco</li>
+                <li class="icon-logo-qualcomm">Qualcomm</li>
+                <li class="icon-logo-embraer">Embraer</li>
+                <li class="icon-logo-cea">C&amp;A</li>
+                <li class="icon-logo-gm">GM</li>
+                <li class="icon-logo-siemens">Siemens</li>
+                <li class="icon-logo-natura">Natura</li>
+                <li class="icon-logo-rbs">Grupo RBS</li>
+                <li class="icon-logo-takeda">Grupo Takeda</li>
+            </ul>
         </div>
         <a href="#/skills" title="Go to Skills" class="btn-goto"><span class="icon-arrow-donw-dark"><!--  --></span></a>
     </section>
