--- a/index.html
+++ b/index.html
@@ -24,106 +24,108 @@
     
 </head>
 <body class="loading">
-    <div class="loader"><div></div></div>
-    <span class="icon-nav" title="Open Navigation"><!--   --></span>
-    <span class="icon-nav-close" title="Close Navigation"><!--   --></span>
-    <div class="lst-language">
-        <a href="#/en" class="en active" title="English">EN</a>
-        <a href="#/pt" class="pt" title="Português">PT</a>
+    <div id="general">
+        <div class="loader"><div></div></div>
+        <span class="icon-nav" title="Open Navigation"><!--   --></span>
+        <span class="icon-nav-close" title="Close Navigation"><!--   --></span>
+        <div class="lst-language">
+            <a href="#/en" class="en active" title="English">EN</a>
+            <a href="#/pt" class="pt" title="Português">PT</a>
+        </div>
+        <nav>
+            <div class="content">
+                <h1>Vincius Marques</h1>
+                <a href="#/about" class="about" title="Sobre">Sobre</a>
+                <a href="#/skills" class="skills" title="Habilidades">Habilidades</a>
+                <a href="#/works" class="works" title="Experiência de trabalho">Experiência de trabalho</a>
+                <a href="#/education" class="education" title="Educação">Educação</a>
+                <a href="#/contact" class="contact" title="Contato">Contato</a>
+            </div>
+        </nav>
+        <header>
+            <div class="content">
+                <div class="img">Vinicius Marques</div>
+                <h1>Vinicius Marques</h1>
+                <h2>Um apaixonado pelo front end.</h2>
+            </div>
+            <a href="#/about" title="Go to About" class="btn-goto"><span class="icon-arrow-donw-dark"><!--  --></span></a>
+        </header>
+        <section id="about">
+            <div class="content">
+                <h2 class="title"></h2>
+                <p class="description"></p>
+                <div class="introduction">
+                    <p></p>
+                </div>
+                <ul class="images">
+                    <li><img src="img/married.png" height="275" width="400" alt="Married"></li>
+                    <li><img src="img/meat.png" height="275" width="400" alt="Maniac for meat"></li>
+                    <li><img src="img/health.png" height="275" width="400" alt="Kind of an athlete"></li>
+                    <li><img src="img/travel.png" height="275" width="400" alt="Passionate about traveling"></li>
+                </ul>
+            </div>
+            <a href="#/highlights" title="Go to Highlights" class="btn-goto dark"><span class="icon-arrow-donw-light"><!--  --></span></a>
+        </section>
+        <section class="dark" id="highlights">
+            <div class="content">
+                <h2 class="title"></h2>
+                <p class="description"></p>
+                <ul class="companies">
+                    <li class="icon-logo-bradesco">Bradesco</li>
+                    <li class="icon-logo-qualcomm">Qualcomm</li>
+                    <li class="icon-logo-embraer">Embraer</li>
+                    <li class="icon-logo-cea">C&amp;A</li>
+                    <li class="icon-logo-gm">GM</li>
+                    <li class="icon-logo-siemens">Siemens</li>
+                    <li class="icon-logo-natura">Natura</li>
+                    <li class="icon-logo-rbs">Grupo RBS</li>
+                    <li class="icon-logo-takeda">Grupo Takeda</li>
+                </ul>
+            </div>
+            <a href="#/skills" title="Go to Skills" class="btn-goto"><span class="icon-arrow-donw-dark"><!--  --></span></a>
+        </section>
+        <section id="skills">
+            <div class="content">
+                <h2 class="title"></h2>
+                <p class="description"></p>
+                <div class="triggers">
+                </div>
+                <ul class="list-skills">                
+                </ul>
+            </div>
+            <a href="#/works" title="Go to Works" class="btn-goto dark"><span class="icon-arrow-donw-light"><!--  --></span></a>
+        </section>
+        <section class="dark" id="works">
+            <div class="content">
+                <h2 class="title"></h2>
+                <p class="description"></p>
+                <ul class="timeline"></ul>
+            </div>
+            <a href="#/education" title="Go to Education" class="btn-goto"><span class="icon-arrow-donw-dark"><!--  --></span></a>
+        </section>
+        <section id="education">
+            <div class="content">
+                <h2 class="title"></h2>
+                <p class="description"></p>
+                <ul class="timeline"></ul>
+            </div>
+            <a href="#/contact" title="Go to Contact" class="btn-goto contact"><span class="icon-arrow-donw-dark"><!--  --></span></a>
+        </section>
+        <section id="contact" class="contact">
+            <div id="map"><!--  --></div>
+            <div class="content">
+                <h2 class="title"></h2>
+                <p class="description"></p>
+                <ul></ul>
+            </div>
+        </section>
+        <footer>
+            <div class="content">
+                <h1>Vinicius Marques</h1>
+                <h2>Vinicius Roloff Marques &copy; 2014</h2>
+            </div>
+        </footer>
     </div>
-    <nav>
-        <div class="content">
-            <h1>Vincius Marques</h1>
-            <a href="#/about" class="about" title="Sobre">Sobre</a>
-            <a href="#/skills" class="skills" title="Habilidades">Habilidades</a>
-            <a href="#/works" class="works" title="Experiência de trabalho">Experiência de trabalho</a>
-            <a href="#/education" class="education" title="Educação">Educação</a>
-            <a href="#/contact" class="contact" title="Contato">Contato</a>
-        </div>
-    </nav>
-    <header>
-        <div class="content">
-            <div class="img">Vinicius Marques</div>
-            <h1>Vinicius Marques</h1>
-            <h2>Um apaixonado pelo front end.</h2>
-        </div>
-        <a href="#/about" title="Go to About" class="btn-goto"><span class="icon-arrow-donw-dark"><!--  --></span></a>
-    </header>
-    <section id="about">
-        <div class="content">
-            <h2 class="title"></h2>
-            <p class="description"></p>
-            <div class="introduction">
-                <p></p>
-            </div>
-            <ul class="images">
-                <li><img src="img/married.png" height="275" width="400" alt="Married"></li>
-                <li><img src="img/meat.png" height="275" width="400" alt="Maniac for meat"></li>
-                <li><img src="img/health.png" height="275" width="400" alt="Kind of an athlete"></li>
-                <li><img src="img/travel.png" height="275" width="400" alt="Passionate about traveling"></li>
-            </ul>
-        </div>
-        <a href="#/highlights" title="Go to Highlights" class="btn-goto dark"><span class="icon-arrow-donw-light"><!--  --></span></a>
-    </section>
-    <section class="dark" id="highlights">
-        <div class="content">
-            <h2 class="title"></h2>
-            <p class="description"></p>
-            <ul class="companies">
-                <li class="icon-logo-bradesco">Bradesco</li>
-                <li class="icon-logo-qualcomm">Qualcomm</li>
-                <li class="icon-logo-embraer">Embraer</li>
-                <li class="icon-logo-cea">C&amp;A</li>
-                <li class="icon-logo-gm">GM</li>
-                <li class="icon-logo-siemens">Siemens</li>
-                <li class="icon-logo-natura">Natura</li>
-                <li class="icon-logo-rbs">Grupo RBS</li>
-                <li class="icon-logo-takeda">Grupo Takeda</li>
-            </ul>
-        </div>
-        <a href="#/skills" title="Go to Skills" class="btn-goto"><span class="icon-arrow-donw-dark"><!--  --></span></a>
-    </section>
-    <section id="skills">
-        <div class="content">
-            <h2 class="title"></h2>
-            <p class="description"></p>
-            <div class="triggers">
-            </div>
-            <ul class="list-skills">                
-            </ul>
-        </div>
-        <a href="#/works" title="Go to Works" class="btn-goto dark"><span class="icon-arrow-donw-light"><!--  --></span></a>
-    </section>
-    <section class="dark" id="works">
-        <div class="content">
-            <h2 class="title"></h2>
-            <p class="description"></p>
-            <ul class="timeline"></ul>
-        </div>
-        <a href="#/education" title="Go to Education" class="btn-goto"><span class="icon-arrow-donw-dark"><!--  --></span></a>
-    </section>
-    <section id="education">
-        <div class="content">
-            <h2 class="title"></h2>
-            <p class="description"></p>
-            <ul class="timeline"></ul>
-        </div>
-        <a href="#/contact" title="Go to Contact" class="btn-goto contact"><span class="icon-arrow-donw-dark"><!--  --></span></a>
-    </section>
-    <section id="contact" class="contact">
-        <div id="map"><!--  --></div>
-        <div class="content">
-            <h2 class="title"></h2>
-            <p class="description"></p>
-            <ul></ul>
-        </div>
-    </section>
-    <footer>
-        <div class="content">
-            <h1>Vinicius Marques</h1>
-            <h2>Vinicius Roloff Marques &copy; 2014</h2>
-        </div>
-    </footer>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
