--- a/topinsta/index.html
+++ b/topinsta/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 
 </body>
