--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 	<meta name="description" content="Personal portifolio."/>
 
 	<meta name="theme-color" content="#db5945">
-    <link rel="icon" sizes="192x192" href="icon.png">
-    <link rel="manifest" href="manifest.json">
+    <!-- <link rel="icon" sizes="192x192" href="icon.png"> -->
+    <!-- <link rel="manifest" href="manifest.json"> -->
 </head>
 <body>
   <div id="app">
