--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<title>V2RM | Vinicius  Marques</title>
-	<meta name="description" content="Personal portifolio."/>
+    <meta name="description" content="Personal portifolio."/>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 
 	<meta name="theme-color" content="#db5945">
     <!-- <link rel="icon" sizes="192x192" href="icon.png"> -->
@@ -22,7 +24,7 @@
 			</picture>
 		</header>
 		<section id="about">
-			<h1>Hi, my name is <strong>Vinicius Marques</strong> and I am <script>document.write('33');</script> years-old and I live in Pelotas - RS - Brazil.</h1>
+			<h1>Hi, my name is <strong>Vinicius Marques</strong> and I am <script>function getAge(e){var t=new Date,g=new Date(e),a=t.getFullYear()-g.getFullYear(),n=t.getMonth()-g.getMonth();return(n<0||0===n&&t.getDate()<g.getDate())&&a--,a}; document.write(getAge('1985-05-17'));</script> years-old and I live in Pelotas - RS - Brazil.</h1>
 			<p>I hold a Bachelor of Computer Science granted by the Catholic University Pelotas (UCPel-2011) and a Postgraduate in Project Management by the Senac Technology Faculy, in Pelotas.</p>
 			<p>I have been working as a Front End Developer since 2004, when I started working at the AG2 agency, where I worked up to March of 2013. In April of 2013, I was invited to work at Nodo, where I have currently been working as Head of the Front End team, as well as a Training and Development Manager.</p>
 			<p>I work with a variety of large worlwide renowned companies. I have worked on short, medium, and long term projects, ranging from an average two weeks to two years time projects, as a Senior Front End Developer, Team Leader, and Technical Responsible.</p>
